// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sync should handle multiple calls to sync correctly 1`] = `
Object {
  "events": Array [
    Object {
      "guid": "0x0...",
      "type": "DEVICE_REGISTERED",
    },
  ],
  "eventsProcessed": 1,
}
`;

exports[`sync should handle multiple calls to sync correctly 2`] = `
Object {
  "events": Array [
    Object {
      "guid": "0x0...",
      "type": "DEVICE_REGISTERED",
    },
  ],
  "eventsProcessed": 1,
}
`;

exports[`sync should handle multiple calls to sync correctly 3`] = `
Object {
  "events": Array [
    Object {
      "type": "USER_REGISTERED",
      "username": "bob@example.com",
    },
    Object {
      "guid": "0x0...",
      "type": "DEVICE_REGISTERED",
    },
  ],
  "eventsProcessed": 2,
}
`;

exports[`sync should handle multiple calls to sync correctly 4`] = `
Object {
  "events": Array [
    Object {
      "type": "USER_REGISTERED",
      "username": "bob@example.com",
    },
    Object {
      "guid": "0x0...",
      "type": "DEVICE_REGISTERED",
    },
  ],
  "eventsProcessed": 2,
}
`;
